# practice-20200817-binary_search_for_range

./: .editorconfig  Cargo.toml  README.md
binary_search_for_range/: Cargo.toml
binary_search_for_range/src/: lib.rs
src/: main.rs
