[package]
name = "test2020-08-16_rust_binary_search"
version = "0.1.0"
authors = ["zono <tone@re-knock.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["binary_search_for_range"]

[dependencies]
text_io = "0.1.8"
binary_search_for_range = { path = "./binary_search_for_range" }
